<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tipcalc</string>
    <string name="action_settings">Settings</string>
   
    <string name="Bill_text_view">BILL</string>
	<string name="Bill_edit_text">0.0</string>
	
	<string name="Tip_text_view">Tip</string>
	<string name="Tip_edit_text">0.15</string>
	
	<string name="total_text_view">Total</string>
	<string name="total_edit_text">0.15</string>
	
	<string name="change_tip_text_view">Tip</string>
		
</resources>
